[package]
name = "hyper-http2"
version = "0.1.0"
authors = ["d_ttang <d_ttang@163.com>"]
edition = "2018"
default-run = "hyper-http2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.0.1"
futures = "0.3.13"
hyper = { version = "0.14.4", features = ["full"] }
prost = "0.7.0"
tokio = { version = "1.3.0", features = ["full"] }
tokio-stream = "0.1.4"

[build-dependencies]
prost-build = "0.7.0"
